Fixed z-index positioning(It was the header)

--- a/wwwroot/css/DashboardStyles.css
+++ b/wwwroot/css/DashboardStyles.css
@@ -18,6 +18,7 @@ header {
     position: fixed;
     width: 100%;
     box-sizing: border-box;
+    z-index: 1000;
 }
 
 .user-options {
@@ -37,7 +38,7 @@ header {
     text-decoration: none;
     border-radius: 4px;
     font-size: 25px;
-    z-index: 999;
+    position: relative;
 }
 
 .dropdown-content {
@@ -47,7 +48,6 @@ header {
     background-color: #000000;
     min-width: 14px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 999;
     cursor: pointer;
 }
 
@@ -120,13 +120,10 @@ header {
     padding: 20px;
     box-sizing: border-box;
     transition: left 0.3s ease;
-    
 }
 
 .menu.show {
     left: 0;
-    z-index: 99;
-
 }
 
 .menu a {
@@ -290,7 +287,7 @@ header {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 6;
+    /* z-index: 6; */
 
     display: none;
 }
